# adplace_op

./: .gitignore  Makefile  README.md  app.go  components.d.ts  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  private.der  private.pem  public.der  public.pem  vite.config.ts  wails.json
frontend/: components.d.ts  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: App.vue  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/assets/css/: dark-theme.css  main.css  theme.css
frontend/src/components/: Captcha.vue  ColorfulButton.vue  ColorfulIcons.vue  menu.ts
frontend/src/model/: auth_user.js  base.js  client.js  domain.js
frontend/src/router/: index.ts  layout.ts
frontend/src/utils/: dataManager.ts  index.ts
frontend/src/views/: layout.vue
frontend/src/views/common/: PageCapture.vue  lock.vue  welcome.vue
frontend/src/views/project/: form.vue  (+4 more)
services/: cloudflare.go  json.go  pagecapture.go
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  data.json  data_prod.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/codedeploy/: db.sqlite3
src-tauri/codedeploy/config/: config.yml  gorm_v2.yml
src-tauri/codedeploy/public/: storage
src-tauri/codedeploy/storage/app/uploaded/: .gitignore
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: server.rs
src-tauri/src/model/: db.rs  server.rs
src-tauri/src/tools/: aes.rs  eddsa.rs  json.rs  kv.rs  mod.rs
src/api/: index.ts
src/assets/css/: font.css  main.css
src/components/: header.vue  menu.ts  sidebar.vue
src/model/: auth_user.js  base.js  client.js  domain.js  user_domain.js
src/router/: index.ts  layout.ts
src/store/: sidebar.ts
src/utils/: emoji.ts  index.ts
src/views/: layout.vue
src/views/common/: lock.vue  theme.vue  welcome.vue
src/views/project/: dashboard.vue  domain.vue  form.vue  info.vue  table.vue  terminal.vue  user.vue
src/views/server/: form.vue
utils/: md5_encrypt.go
wails-version/adsplat/: app.go  go.mod  main.go
wails-version/adsplat/frontend/: components.d.ts  index.html  package-lock.json  package.json.md5  vite.config.js
wails-version/adsplat/services/: aes.go  json.go  kv.go
(+27 files in other folders)
