[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["adiudiuu"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }
reqwest = "0.12.7"
tokio = "1.40.0"
ed25519-dalek = { version = "2.1.1", features = ["digest"] }
hex = "0.4.3"
hex-literal = "0.4.1"
sha2 = "0.10.8"
rand = "0.8.5"
rand_core = "0.6.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
