[package]
name = "app"
version = "1.0.0"
description = "AD Manage"
authors = ["adiudiuu"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
reqwest =  { version = "0.12.7", features = ["json"] }
tokio = "1.40.0"
aes = "0.8.4"
base64 = "0.22.1"
bytebuffer = "2.3.0"
cbc = { version = "0.1.2", features = ["std"] }
rand = "0.8.5"
tauri-plugin-fs = "2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
